--- a/vue-jsonp.html
+++ b/vue-jsonp.html
@@ -86,8 +86,8 @@
         </ul>
         <p v-show="this.myData.length==0">暂无数据。。。</p>
     </div>
-    <script src="../vue.js"></script>
-    <script src="../vue-resource.js"></script>
+    <script src="vue.js"></script>
+    <script src="vue-resource.js"></script>
     <script>
         new Vue({
             el: '#box',
